--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>by.segg3r</groupId>
 	<artifactId>testng.util</artifactId>
-	<version>1.2D</version>
+	<version>1.2</version>
 
 	<build>
 		<plugins>
