--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>by.segg3r</groupId>
 	<artifactId>testng.util</artifactId>
-	<version>1.5.0-mongo-3.2.1</version>
+	<version>1.5.0-mongo-3.2.0-mmapv1</version>
 
 	<build>
 		<plugins>
@@ -60,7 +60,7 @@
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
-			<version>1.50.5</version>
+			<version>2.0.0</version>
 		</dependency>
 
 		<dependency>
